          - the "default" attribute, which is used to specify the default
            value of an attribute, now is "value"
          - the "minOccurs" attribute of an attribute element has been removed,
            the attribute "use" has to be used instead. "use" can have the
            following values : default, optional, required, fixed and
            prohibited


Version 0.8.8  June 20, 2000
----------------------------

XML:     Added support for the Unmarshaller to automatically determine the Class of the
         root element, based on a given Mapping, or ClassDescriptorResolver

XML:     Added support for the "has" method for primitives in the generated source

XML:     Added support for specifying the destination output directory for the
         generated source code

XML:     Added support for fixed attributes, this currently works for string
         or integer values

JDO:     Fixed bug: NULL value in database was read as 0 for Java wrappers
         of primitive types (Long, Integer, etc.), now they are read as "null".
         (Oleg Nitz <on@ibis.odessa.ua>)

JDO:     Changed the inner SELECT syntax in MaxKeyGenerator to make it work
         with Hypersonic SQL.
         (Contributed by Santiago Arriaga <santiago@catnet.com.mx>)

JDO:     Hypersonic SQL driver.
         (Contributed by Santiago Arriaga <santiago.arriaga@catnet.com.mx>)

JDO:     Changed KeyGeneratorFactory interface for better perfomance:
         now the target primary key SQL type is passed to the key generator,
         and no type conversions are performed after the key is generated.
         (Oleg Nitz <on@ibis.odessa.ua>)

JDO:     Added support for attributes of application type and for nested
         attributes. Assume that you have an attribute "balance" of
         applicatation type "Balance" which has methods "getBigDecimal"
         and "setBigDecimal", then you can write in mapping.xml
           <field name="balance.bigDecimal"...